@@ -37,6 +37,7 @@ namespace Castle.MonoRail.Framework.Helpers
 			String valueProperty = FormHelper.ObtainEntryAndRemove(attributes, "value");
 			String textProperty = FormHelper.ObtainEntryAndRemove(attributes, "text");
 			String textFormat = FormHelper.ObtainEntryAndRemove(attributes, "textformat");
+			String valueFormat = FormHelper.ObtainEntryAndRemove(attributes, "valueformat");
 
 			if (dataSourceType == null)
 			{
@@ -53,13 +54,13 @@ namespace Castle.MonoRail.Framework.Helpers
 				}
 
 				return new ListDataSourceState(dataSourceType, dataSource,
-											   valueProperty, textProperty, textFormat, customSuffix);
+											   valueProperty, textProperty, textFormat, valueFormat, customSuffix);
 			}
 			else if (initialSelectionType == dataSourceType)
 			{
 				return new SameTypeOperationState(dataSourceType, 
 				                                  initialSelection, dataSource,
-												  valueProperty, textProperty, textFormat, isInitialSelectionASet);
+												  valueProperty, textProperty, textFormat, valueFormat, isInitialSelectionASet);
 			}
 			else // types are different, most complex scenario
 			{
@@ -67,7 +68,7 @@ namespace Castle.MonoRail.Framework.Helpers
 
 				return new DifferentTypeOperationState(initialSelectionType, 
 				                                       dataSourceType, initialSelection, dataSource,
-													   sourceProperty, valueProperty, textProperty, textFormat, 
+													   sourceProperty, valueProperty, textProperty, textFormat, valueFormat, 
 				                                       isInitialSelectionASet);
 			}
 		}
@@ -162,11 +163,11 @@ namespace Castle.MonoRail.Framework.Helpers
 		protected readonly Type type;
 		protected readonly FormHelper.ValueGetter valuePropInfo;
 		protected readonly FormHelper.ValueGetter textPropInfo;
-		protected readonly String textFormat;
+		protected readonly String textFormat, valueFormat;
 		protected IEnumerator enumerator;
 
 		protected OperationState(Type type, IEnumerable dataSource, 
-			String valueProperty, String textProperty, String textFormat)
+			String valueProperty, String textProperty, String textFormat, String valueFormat)
 		{
 			if (dataSource != null)
 			{
@@ -175,6 +176,7 @@ namespace Castle.MonoRail.Framework.Helpers
 
 			this.type = type;
 			this.textFormat = textFormat;
+			this.valueFormat = valueFormat;
 
 			if (valueProperty != null)
 			{
@@ -183,7 +185,7 @@ namespace Castle.MonoRail.Framework.Helpers
 
 			if (textProperty != null)
 			{
-				textPropInfo = FormHelper.ValueGetterAbstractFactory.Create(type, textProperty); // FormHelper.GetMethod(type, textProperty);
+				textPropInfo = FormHelper.ValueGetterAbstractFactory.Create(type, textProperty); 
 			}
 		}
 
@@ -193,15 +195,16 @@ namespace Castle.MonoRail.Framework.Helpers
 		/// Formats the text.
 		/// </summary>
 		/// <param name="value">The value to be formatted.</param>
-		protected void FormatText(ref object value)
+		/// <param name="format">The format to apply.</param>
+		protected void FormatText(ref object value, string format)
 		{
-			if (textFormat != null && value != null)
+			if (format != null && value != null)
 			{
 				IFormattable formattable = value as IFormattable;
 
 				if (formattable != null)
 				{
-					value = formattable.ToString(textFormat, null);
+					value = formattable.ToString(format, null);
 				}
 			}
 		}
@@ -251,7 +254,7 @@ namespace Castle.MonoRail.Framework.Helpers
 	{
 		public static readonly NoIterationState Instance = new NoIterationState();
 
-		private NoIterationState() : base(null, null, null, null, null)
+		private NoIterationState() : base(null, null, null, null, null, null)
 		{
 		}
 
@@ -270,9 +273,9 @@ namespace Castle.MonoRail.Framework.Helpers
 	{
 		private readonly string customSuffix;
 
-		public ListDataSourceState(Type type, IEnumerable dataSource, String valueProperty, 
-			String textProperty, String textFormat, String customSuffix)
-			: base(type, dataSource, valueProperty, textProperty, textFormat)
+		public ListDataSourceState(Type type, IEnumerable dataSource, String valueProperty,
+			String textProperty, String textFormat, String valueFormat, String customSuffix)
+			: base(type, dataSource, valueProperty, textProperty, textFormat, valueFormat)
 		{
 			this.customSuffix = customSuffix;
 		}
@@ -289,15 +292,16 @@ namespace Castle.MonoRail.Framework.Helpers
 
 			if (valuePropInfo != null)
 			{
-				value = valuePropInfo.GetValue(current); // valuePropInfo.GetValue(current, null);
+				value = valuePropInfo.GetValue(current);
 			}
 
 			if (textPropInfo != null)
 			{
-				text = textPropInfo.GetValue(current); // textPropInfo.GetValue(current, null);
+				text = textPropInfo.GetValue(current);
 			}
 
-			FormatText(ref text);
+			FormatText(ref text, textFormat);
+			FormatText(ref value, valueFormat);
 
 			return new SetItem(current, value != null ? value.ToString() : String.Empty, text != null ? text.ToString() : String.Empty, false);
 		}
@@ -309,8 +313,8 @@ namespace Castle.MonoRail.Framework.Helpers
 		private readonly bool isInitialSelectionASet;
 
 		public SameTypeOperationState(Type type, object initialSelection, IEnumerable dataSource, 
-			String valueProperty, String textProperty, String textFormat, bool isInitialSelectionASet)
-			: base(type, dataSource, valueProperty, textProperty, textFormat)
+			String valueProperty, String textProperty, String textFormat, String valueFormat, bool isInitialSelectionASet)
+			: base(type, dataSource, valueProperty, textProperty, textFormat, valueFormat)
 		{
 			this.initialSelection = initialSelection;
 			this.isInitialSelectionASet = isInitialSelectionASet;
@@ -336,7 +340,8 @@ namespace Castle.MonoRail.Framework.Helpers
 				text = textPropInfo.GetValue(current);
 			}
 
-			FormatText(ref text);
+			FormatText(ref text, textFormat);
+			FormatText(ref value, valueFormat);
 
 			bool isSelected = FormHelper.IsPresent(value, initialSelection, valuePropInfo, isInitialSelectionASet);
 
@@ -352,9 +357,9 @@ namespace Castle.MonoRail.Framework.Helpers
 
 		public DifferentTypeOperationState(Type initialSelectionType, Type dataSourceType, 
 			object initialSelection, IEnumerable dataSource, 
-			String sourceProperty, String valueProperty, 
-			String textProperty, String textFormat, bool isInitialSelectionASet)
-			: base(dataSourceType, dataSource, valueProperty, textProperty, textFormat)
+			String sourceProperty, String valueProperty,
+			String textProperty, String textFormat, String valueFormat, bool isInitialSelectionASet)
+			: base(dataSourceType, dataSource, valueProperty, textProperty, textFormat, valueFormat)
 		{
 			this.initialSelection = initialSelection;
 			this.isInitialSelectionASet = isInitialSelectionASet;
@@ -389,7 +394,8 @@ namespace Castle.MonoRail.Framework.Helpers
 				text = textPropInfo.GetValue(current);
 			}
 
-			FormatText(ref text);
+			FormatText(ref text, textFormat);
+			FormatText(ref value, valueFormat);
 
 			bool isSelected = FormHelper.IsPresent(value, initialSelection, sourcePropInfo, isInitialSelectionASet);
 
